// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual snapshots > admin Design System page – Sprint 1 showcase 1`] = `
<main
  class="container space-y-8 py-6"
>
  <header
    class="space-y-2"
  >
    <div
      class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 w-fit"
    >
      Sprint 1
    </div>
    <h1
      class="text-3xl font-bold text-foreground"
    >
      Design System Showcase
    </h1>
    <p
      class="max-w-3xl text-muted-foreground"
    >
      Visuele controlepagina voor kerncomponenten, states, mobile spacing en Arabic/RTL-weergave.
    </p>
  </header>
  <section
    class="grid gap-4 lg:grid-cols-3"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm lg:col-span-2"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          Buttons, badges en inputs
        </h3>
        <p
          class="text-sm text-muted-foreground"
        >
          Light-mode contrast, focus rings, hover states en disabled states.
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-6"
      >
        <div
          class="flex flex-wrap gap-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
          >
            <svg
              class="lucide lucide-save h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            Opslaan
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2"
          >
            Secundair
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
          >
            Outline
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 px-4 py-2"
          >
            Verwijderen
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
          >
            Ghost
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 text-primary underline-offset-4 hover:underline h-10 px-4 py-2"
          >
            Link actie
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
            disabled=""
          >
            Uitgeschakeld
          </button>
        </div>
        <div
          class="flex flex-wrap gap-2"
        >
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
          >
            Standaard
          </div>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
          >
            Concept
          </div>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
          >
            Actie nodig
          </div>
          <div
            class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
          >
            Outline
          </div>
        </div>
        <div
          class="grid gap-3 sm:grid-cols-2"
        >
          <input
            aria-label="Zoeken"
            class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
            placeholder="Zoek studenten, lessen of betalingen"
          />
          <div
            class="relative"
          >
            <svg
              class="lucide lucide-search pointer-events-none absolute left-3 top-1/2 h-4 w-4 -translate-y-1/2 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="11"
                cy="11"
                r="8"
              />
              <path
                d="m21 21-4.3-4.3"
              />
            </svg>
            <input
              aria-label="Zoeken met icoon"
              class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-9"
              placeholder="Snelle zoekactie"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          Alerts
        </h3>
        <p
          class="text-sm text-muted-foreground"
        >
          Statusmeldingen met semantische tokens.
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-3"
      >
        <div
          class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
          role="alert"
        >
          <svg
            class="lucide lucide-circle-check h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <h5
            class="mb-1 font-medium leading-none tracking-tight"
          >
            Succesvol opgeslagen
          </h5>
          <div
            class="text-sm [&_p]:leading-relaxed"
          >
            De wijzigingen zijn klaar voor review.
          </div>
        </div>
        <div
          class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
          role="alert"
        >
          <svg
            class="lucide lucide-circle-alert h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <h5
            class="mb-1 font-medium leading-none tracking-tight"
          >
            Controle vereist
          </h5>
          <div
            class="text-sm [&_p]:leading-relaxed"
          >
            Deze flow bevat nog openstaande validatie.
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="space-y-4"
  >
    <div>
      <h2
        class="text-2xl font-semibold text-foreground"
      >
        Admin dashboard widgets
      </h2>
      <p
        class="text-muted-foreground"
      >
        Responsieve stats cards met keyboard focus en compacte mobile padding.
      </p>
    </div>
    <div
      class="grid gap-4 rounded-xl border border-transparent p-1 shadow-md sm:grid-cols-2 sm:border-accent/40 sm:shadow-lg lg:grid-cols-4 lg:border-accent lg:shadow-xl"
    >
      <div
        class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
        tabindex="0"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="space-y-1"
          >
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Gebruikers
            </p>
            <p
              class="text-2xl font-bold text-foreground"
            >
              1280
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              Geregistreerde gebruikers
            </p>
            <p
              class="text-xs font-medium text-success"
            >
              +
              12
              %
               
              <span
                class="text-muted-foreground"
              >
                vs last month
              </span>
            </p>
          </div>
          <div
            class="rounded-full bg-primary/10 p-3"
          >
            <svg
              class="lucide lucide-users h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
              />
              <circle
                cx="9"
                cy="7"
                r="4"
              />
              <path
                d="M22 21v-2a4 4 0 0 0-3-3.87"
              />
              <path
                d="M16 3.13a4 4 0 0 1 0 7.75"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
        tabindex="0"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="space-y-1"
          >
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Dashboard
            </p>
            <p
              class="text-2xl font-bold text-foreground"
            >
              98%
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              Gezonde sessies
            </p>
          </div>
          <div
            class="rounded-full bg-primary/10 p-3"
          >
            <svg
              class="lucide lucide-layout-dashboard h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="9"
                rx="1"
                width="7"
                x="3"
                y="3"
              />
              <rect
                height="5"
                rx="1"
                width="7"
                x="14"
                y="3"
              />
              <rect
                height="9"
                rx="1"
                width="7"
                x="14"
                y="12"
              />
              <rect
                height="5"
                rx="1"
                width="7"
                x="3"
                y="16"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
        tabindex="0"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="space-y-1"
          >
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Inschrijvingen
            </p>
            <p
              class="text-2xl font-bold text-foreground"
            >
              42
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              Deze week verwerkt
            </p>
          </div>
          <div
            class="rounded-full bg-primary/10 p-3"
          >
            <svg
              class="lucide lucide-circle-check h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="m9 12 2 2 4-4"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
        tabindex="0"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="space-y-1"
          >
            <p
              class="text-sm font-medium text-muted-foreground"
            >
              Actie nodig
            </p>
            <p
              class="text-2xl font-bold text-foreground"
            >
              7
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              Openstaande controles
            </p>
            <p
              class="text-xs font-medium text-destructive"
            >
              -
              3
              %
               
              <span
                class="text-muted-foreground"
              >
                vs last month
              </span>
            </p>
          </div>
          <div
            class="rounded-full bg-primary/10 p-3"
          >
            <svg
              class="lucide lucide-circle-alert h-6 w-6 text-primary"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="8"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="16"
                y2="16"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </section>
  <section
    class="grid gap-4 lg:grid-cols-2"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          Sidebar states
        </h3>
        <p
          class="text-sm text-muted-foreground"
        >
          Default, hover/focus-contract en active state.
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-2"
      >
        <a
          class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md"
          href="#"
        >
          <svg
            class="lucide lucide-layout-dashboard h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
          Dashboard
        </a>
        <a
          class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md bg-sidebar-accent text-sidebar-accent-foreground font-medium"
          href="#"
        >
          <svg
            class="lucide lucide-users h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="9"
              cy="7"
              r="4"
            />
            <path
              d="M22 21v-2a4 4 0 0 0-3-3.87"
            />
            <path
              d="M16 3.13a4 4 0 0 1 0 7.75"
            />
          </svg>
          Gebruikers
        </a>
        <a
          aria-label="Collapsed dashboard"
          class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md justify-center px-2 sm:w-12"
          href="#"
        >
          <svg
            class="lucide lucide-layout-dashboard h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm font-sans"
      dir="rtl"
      lang="ar"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          معاينة عربية
        </h3>
        <p
          class="text-sm text-muted-foreground"
        >
          اختبار الاتجاه، المسافات، المحاذاة والطباعة العربية.
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-4"
      >
        <a
          class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md bg-sidebar-accent text-sidebar-accent-foreground font-medium"
          href="#"
        >
          <svg
            class="lucide lucide-layout-dashboard h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="9"
              rx="1"
              width="7"
              x="3"
              y="3"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="14"
              y="3"
            />
            <rect
              height="9"
              rx="1"
              width="7"
              x="14"
              y="12"
            />
            <rect
              height="5"
              rx="1"
              width="7"
              x="3"
              y="16"
            />
          </svg>
          لوحة التحكم
        </a>
        <div
          class="grid gap-3 sm:grid-cols-2"
        >
          <input
            aria-label="بحث عربي"
            class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
            placeholder="ابحث عن طالب أو درس"
          />
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
          >
            <svg
              class="lucide lucide-save h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
              />
              <path
                d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
              />
              <path
                d="M7 3v4a1 1 0 0 0 1 1h7"
              />
            </svg>
            حفظ التغييرات
          </button>
        </div>
        <div
          class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
          tabindex="0"
        >
          <div
            class="flex items-center justify-between"
          >
            <div
              class="space-y-1"
            >
              <p
                class="text-sm font-medium text-muted-foreground"
              >
                إجمالي المستخدمين
              </p>
              <p
                class="text-2xl font-bold text-foreground"
              >
                1280
              </p>
              <p
                class="text-xs text-muted-foreground"
              >
                المستخدمون المسجلون
              </p>
            </div>
            <div
              class="rounded-full bg-primary/10 p-3"
            >
              <svg
                class="lucide lucide-users h-6 w-6 text-primary"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`visual snapshots > admin StatsCard – RTL Arabic typography 1`] = `
<div
  class="font-sans"
  dir="rtl"
  lang="ar"
>
  <div
    class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
    tabindex="0"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="space-y-1"
      >
        <p
          class="text-sm font-medium text-muted-foreground"
        >
          إجمالي المستخدمين
        </p>
        <p
          class="text-2xl font-bold text-foreground"
        >
          42
        </p>
        <p
          class="text-xs text-muted-foreground"
        >
          المستخدمون المسجلون
        </p>
      </div>
      <div
        class="rounded-full bg-primary/10 p-3"
      >
        <svg
          class="lucide lucide-users h-6 w-6 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <path
            d="M16 3.13a4 4 0 0 1 0 7.75"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`visual snapshots > admin StatsCard – basic 1`] = `
<div
  class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
  tabindex="0"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="space-y-1"
    >
      <p
        class="text-sm font-medium text-muted-foreground"
      >
        Total Users
      </p>
      <p
        class="text-2xl font-bold text-foreground"
      >
        42
      </p>
      <p
        class="text-xs text-muted-foreground"
      >
        Registered users
      </p>
    </div>
    <div
      class="rounded-full bg-primary/10 p-3"
    >
      <svg
        class="lucide lucide-users h-6 w-6 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <path
          d="M16 3.13a4 4 0 0 1 0 7.75"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`visual snapshots > admin StatsCard – with positive trend 1`] = `
<div
  class="rounded-lg border bg-card p-4 shadow-sm transition-shadow hover:shadow-md focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:p-6"
  tabindex="0"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="space-y-1"
    >
      <p
        class="text-sm font-medium text-muted-foreground"
      >
        Active Classes
      </p>
      <p
        class="text-2xl font-bold text-foreground"
      >
        12
      </p>
      <p
        class="text-xs text-muted-foreground"
      >
        Total classes
      </p>
      <p
        class="text-xs font-medium text-success"
      >
        +
        8
        %
         
        <span
          class="text-muted-foreground"
        >
          vs last month
        </span>
      </p>
    </div>
    <div
      class="rounded-full bg-primary/10 p-3"
    >
      <svg
        class="lucide lucide-users h-6 w-6 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <path
          d="M16 3.13a4 4 0 0 1 0 7.75"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`visual snapshots > admin stats grid wrapper className 1`] = `"grid gap-4 md:grid-cols-2 lg:grid-cols-4 rounded-xl p-1 shadow-md sm:shadow-lg lg:shadow-xl border border-transparent sm:border-accent/40 lg:border-accent"`;

exports[`visual snapshots > light-mode visual token contract 1`] = `
[
  "primary: 160 50% 33%",
  "muted-foreground: 160 10% 38%",
  "accent: 175 60% 32%",
  "success: 142 70% 30%",
  "destructive: 0 84% 45%",
  "input: 170 20% 50%",
  "ring: 160 50% 35%",
  "sidebar-accent: 170 30% 92%",
  "sidebar-accent-foreground: 160 50% 22%",
]
`;

exports[`visual snapshots > sidebar link – RTL Arabic state 1`] = `
<div
  class="font-sans"
  dir="rtl"
  lang="ar"
>
  <a
    class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md bg-sidebar-accent text-sidebar-accent-foreground font-medium"
    href="/sample"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-house h-5 w-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
      />
      <path
        d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
    </svg>
    <span
      class="truncate flex-1"
    >
      Sample link
    </span>
  </a>
</div>
`;

exports[`visual snapshots > sidebar link – active state 1`] = `
<a
  class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md bg-sidebar-accent text-sidebar-accent-foreground font-medium"
  href="/sample"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
  <span
    class="truncate flex-1"
  >
    Sample link
  </span>
</a>
`;

exports[`visual snapshots > sidebar link – collapsed state 1`] = `
<a
  class="relative flex min-h-10 items-center gap-3 rounded-lg py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md justify-center px-2"
  href="/sample"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</a>
`;

exports[`visual snapshots > sidebar link – default state 1`] = `
<a
  class="relative flex min-h-10 items-center gap-3 rounded-lg px-3 py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md"
  href="/sample"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
  <span
    class="truncate flex-1"
  >
    Sample link
  </span>
</a>
`;
